# ollama_wsl2_docker_vulkan_driver

./: README.md  WINDOWS_POWERSHELL_HANDOFF.md  pyproject.toml
docs/: architecture.md
examples/: Dockerfile.ollama-wsl-amd  config.example.json  docker-compose.wsl-amd.yml
src/ollama_env_audit/: __init__.py
src/ollama_env_audit/application/: __init__.py  services.py  web.py
src/ollama_env_audit/benchmark/: __init__.py  service.py
src/ollama_env_audit/cli/: __init__.py  app.py
src/ollama_env_audit/config/: __init__.py  settings.py
src/ollama_env_audit/domain/: __init__.py  enums.py  exceptions.py  models.py  protocols.py
src/ollama_env_audit/infrastructure/: __init__.py  executor.py  logging.py
src/ollama_env_audit/probes/: __init__.py  base.py  docker.py  ollama.py  windows.py  wsl.py
src/ollama_env_audit/recommendation/: __init__.py  engine.py
src/ollama_env_audit/reporting/: __init__.py  renderers.py
src/ollama_env_audit/runtime/: __init__.py  catalog.py  launchers.py
tests/: test_benchmark.py  test_cli.py  test_executor.py  test_ollama_probe.py  test_recommendation.py  test_reporting.py  test_runtime.py  test_wsl_probe.py
